| Summary: | ASTERISK-22120: Missing debug strings | ||
| Reporter: | Birger "WIMPy" Harzenetter (wimpy) | Labels: | |
| Date Opened: | 2013-07-18 21:41:31 | Date Closed: | 2013-07-20 21:38:02 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_iax2 |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) iaxcmds.diff | |
| Description: | I copied/abbreviated some missing entries from include/asterisk/frame.h to
channels/iax2/parser.c in the hope that someone find it helpful. | ||
| Comments: | By: Matt Jordan (mjordan) 2013-07-19 11:33:58.218-0500 Cool - thanks for the patch! | ||